<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="autentia.com.autentiatrainingapp.AddCourseActivityFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_course_legend"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:weightSum="1">>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/add_course_field_active"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_above="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_weight="0.23" />

        <CheckBox
            android:id="@+id/add_course_checkBox_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_toEndOf="@+id/textView3"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="0dp"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/add_course_field_teacher"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_weight="1.04" />

        <Spinner
            android:id="@+id/add_course_spinner_teacher"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:entries="@array/teacher_array"
            android:prompt="@string/add_course_field_teacher"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/add_course_field_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_weight="1.14" />

        <EditText
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_course_editText_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/add_course_field_level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_weight="1.04" />

        <Spinner
            android:id="@+id/add_course_spinner_level"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:entries="@array/level_array"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/add_course_field_hours"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_weight="1.01" />

        <EditText
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/add_course_editText_hours" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_button_save"
        android:id="@+id/add_course_submit_button"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
